--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <div class="video-container">
         <div class="video-frame">
             <iframe 
-                src="https://www.youtube.com/embed/hAVLIFQuoh8" 
+                src="https://youtu.be/0fku2RwYXhw?si=k4wmLjrlCoyqPpd9" 
                 title="YouTube video player" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen
