Fix subtitle text in index.html

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     
     <!-- الدعاء فقط بدون العبارة الخضراء -->
     <div class="mystical-container">
-        <div class="subtitle">اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ</div>
+        <div class="subtitle">اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَآلِ مُحَمَّدٍ</div>
     </div>
     
     <!-- قسم الفيديو - إعادة تفعيله وتحديث رابط الفيديو -->
